@@ -124,6 +124,7 @@ BEGIN
         MENUITEM "", 0, MFT_SEPARATOR
         MENUITEM "New Toolbar",                 ID_MENUITEM_NEW_TOOLBAR, MFT_STRING, MFS_CHECKED
         MENUITEM "Classic Toolbar",             ID_MENUITEM_OLD_TOOLBAR, MFT_STRING, MFS_CHECKED
+        MENUITEM "Show Toolbar",                ID_MENUITEM_SHOWHIDE_TOOLBAR, MFT_STRING
         MENUITEM "", 0, MFT_SEPARATOR
         MENUITEM "Expand All\tCtrl+Alt+Plus",   ID_MENUITEM_EXPANDALL, MFT_STRING
         MENUITEM "Collapse All\tCtrl+Alt+Minus", ID_MENUITEM_COLLAPSEALL, MFT_STRING
